fix router and apdate angular 7.1.4

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,19 +8,19 @@
       <nav class="d-lg-block d-none">
         <ul class="header__items">
           <li class="header__item">
-            <a class="header__item-link" href="#" routerLink="/home" routerLinkActive="active" (click)="onTop()">Главная</a>
+            <a class="header__item-link" href="#" routerLink="/home" routerLinkActive="active">Главная</a>
           </li>
           <li class="header__item">
-            <a class="header__item-link" href="#" routerLink="/catalog" routerLinkActive="active" (click)="onTop()">Каталог</a>
+            <a class="header__item-link" href="#" routerLink="/catalog" routerLinkActive="active">Каталог</a>
           </li>
           <li class="header__item">
-            <a class="header__item-link" href="#" routerLink="/payment" routerLinkActive="active" (click)="onTop()">Оплата и Доставка</a>
+            <a class="header__item-link" href="#" routerLink="/payment" routerLinkActive="active">Оплата и Доставка</a>
           </li>
           <li class="header__item">
-            <a class="header__item-link" href="#" routerLink="/gallery" routerLinkActive="active" (click)="onTop()">Галерея</a>
+            <a class="header__item-link" href="#" routerLink="/gallery" routerLinkActive="active">Галерея</a>
           </li>
           <li class="header__item">
-            <a class="header__item-link" href="#" routerLink="/contact" routerLinkActive="active" (click)="onTop()">Контакты</a>
+            <a class="header__item-link" href="#" routerLink="/contact" routerLinkActive="active">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -64,29 +64,29 @@
   <div class="footer-top-bg">
     <div class="container">
       <div class="footer-top">
-        <div class="row footer-top-wrap">
+        <div class="row footer-top-wrap justify-content-between">
           <div class="col-md-4 footer-top-menu">
             <ul>
-              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/section" href="#" (click)="onTop()">Секционные ворота</a></li>
-              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/street" href="#" (click)="onTop()">Уличные ворота</a></li>
-              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/anti-fire" href="#" (click)="onTop()">Противопожарные ворота</a></li>
-              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/avtomatica" href="#" (click)="onTop()">Автоматика</a></li>
+              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/section" href="#">Секционные ворота</a></li>
+              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/street" href="#">Уличные ворота</a></li>
+              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/anti-fire" href="#">Противопожарные ворота</a></li>
+              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/avtomatica" href="#">Автоматика</a></li>
             </ul>
           </div>
           <div class="col-md-4 footer-top-menu">
             <ul>
-              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/barrier" href="#" (click)="onTop()">Шлагбаумы, цепные барьеры</a></li>
-              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/rollet" href="#" (click)="onTop()">Роьставни, рольворота</a></li>
-              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/speed-roll" href="#" (click)="onTop()">Скоростные ворота</a></li>
-              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/transshipment" href="#" (click)="onTop()">Перегрузочное оборудование</a></li>
+              <li class="footer-top-menu-item text-center"><a class="footer-top-menu-link" routerLink="/catalog/barrier" href="#">Шлагбаумы, цепные барьеры</a></li>
+              <li class="footer-top-menu-item text-center"><a class="footer-top-menu-link" routerLink="/catalog/rollet" href="#">Роьставни, рольворота</a></li>
+              <li class="footer-top-menu-item text-center"><a class="footer-top-menu-link" routerLink="/catalog/speed-roll" href="#">Скоростные ворота</a></li>
+              <li class="footer-top-menu-item text-center"><a class="footer-top-menu-link" routerLink="/catalog/transshipment" href="#">Перегрузочное оборудование</a></li>
             </ul>
           </div>
           <div class="col-md-4 footer-top-menu">
             <ul>
-              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/ramp-and-table" href="#" (click)="onTop()">Рампы, столы подьемные</a></li>
-              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/payment" href="#" (click)="onTop()">Оплата и доставка</a></li>
-              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/gallery" href="#" (click)="onTop()">Галерея</a></li>
-              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/contact" href="#" (click)="onTop()">Контакты</a></li>
+              <li class="footer-top-menu-item text-md-right"><a class="footer-top-menu-link" routerLink="/catalog/ramp-and-table" href="#">Рампы, столы подьемные</a></li>
+              <li class="footer-top-menu-item text-md-right"><a class="footer-top-menu-link" routerLink="/payment" href="#">Оплата и доставка</a></li>
+              <li class="footer-top-menu-item text-md-right"><a class="footer-top-menu-link" routerLink="/gallery" href="#">Галерея</a></li>
+              <li class="footer-top-menu-item text-md-right"><a class="footer-top-menu-link" routerLink="/contact" href="#">Контакты</a></li>
             </ul>
           </div>
         </div>
